docker security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress


#kubectl run frontend --image=nginx
#kubectl run backend --image=nginx
#kubectl expose pod frontend --port 80
#kubectl expose pod backend --port 80
#kubectl exec frontend -- curl backend
#kubectl exec backend -- curl frontend
