docker security/frontend-backend-db.yaml
#kubectl create ns cassandra
#now edit cassandra ns with label cassandra
#kubectl edit ns cassandra
#kubectl get ns --show-labels
# now create cassandra pod
#kubectl -n cassandra run casandra --image=nginx

# allows backend pods to have incoming traffic from frontend pods and to cassandra namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: frontend
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            ns: cassandra
